--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/assets/images",
-              "src/assets/images/*.jpg",
-              "src/assets/images/*.jpeg",
-              "src/assets/images/*.png"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
