--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@ionic/angular": "^7.5.7",
     "angular-notifier": "^12.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -29,6 +31,7 @@
     "@angular/cli": "~14.0.7",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/swiper": "^6.0.0",
     "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
