--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,25 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "core-js/modules/es.array.index-of.js",
+              "core-js/modules/es.array.iterator.js",
+              "core-js/modules/es.array.reduce.js",
+              "core-js/modules/es.array.reverse.js",
+              "core-js/modules/es.promise.js",
+              "core-js/modules/es.regexp.to-string.js",
+              "core-js/modules/es.string.ends-with.js",
+              "core-js/modules/es.string.includes.js",
+              "core-js/modules/es.string.match.js",
+              "core-js/modules/es.string.replace.js",
+              "core-js/modules/es.string.split.js",
+              "core-js/modules/es.string.starts-with.js",
+              "core-js/modules/es.string.trim.js",
+              "core-js/modules/web.dom-collections.iterator.js",
+              "raf",
+              "rgbcolor",
+              "html2canvas"
+            ],
             "outputPath": "dist/hotel-booking",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -24,7 +43,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/swiper/swiper-bundle.css"
+              "./node_modules/swiper/swiper-bundle.css",
+              "./node_modules/angular-calendar/css/angular-calendar.css"
             ],
             "scripts": [
               "src/assets/js/main.js",
@@ -37,13 +57,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "1mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "8mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "400kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "800kb",
+                  "maximumError": "2mb"
                 }
               ],
               "fileReplacements": [
