--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@ionic/angular": "^7.5.7",
+    "angular-calendar": "^0.30.1",
     "angular-notifier": "^12.0.0",
+    "date-fns": "^2.16.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "razorpay": "^2.8.3",
     "rxjs": "~7.5.0",
     "swiper": "^11.0.5",
     "tslib": "^2.3.0",
@@ -31,6 +37,7 @@
     "@angular/cli": "~14.0.7",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/pdfmake": "^0.2.8",
     "@types/swiper": "^6.0.0",
     "angular-cli-ghpages": "^1.0.7",
     "jasmine-core": "~4.1.0",
